[package]
name = "source-mdl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
toml = "0.8.8"
walkdir = "2.4.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
